--- a/C0120G1/Module3/Boostrap/Bai_Tap/Landing_page/ccc.css
+++ b/C0120G1/Module3/Boostrap/Bai_Tap/Landing_page/ccc.css
@@ -35,7 +35,7 @@ header .icon-hd{
 }
 header .fas ,.far{
     font-size: 25px;
-    padding-right: 10px;
+    padding-right: 5px;
 }
 header .nav-icon{
     margin-right: 75px;
@@ -52,6 +52,29 @@ header #navbarDropdownMenuLink4{
 }
 .wrap-icon li{
     float: left;
+
+}
+.wrap-icon{
+    padding: 20px 100px;
+
+}
+.wrap-icon a{
+    display: block;
+}
+.wrap-icon img{
+    margin-left: 44px;
+}
+.content-jumbo{
+    text-align: center;
+   font-family:"Segoe UI";
+
+}
+.content-jumbo p{
+    margin-top: 39px;
+}
+.content-jumbo h2{
+    margin-top: 24px;
+    font-weight: 300;
 }
 
 
