--- a/C0120G1/Module3/Casestudy/casestudy-angular/src/app/components/customer-edit/customer-edit.component.html
+++ b/C0120G1/Module3/Casestudy/casestudy-angular/src/app/components/customer-edit/customer-edit.component.html
@@ -1,1 +1,48 @@
-<p>customer-edit works!</p>
+<form action="" method="post" role="form">
+  <legend>Edit Customer</legend>
+  <div class="form-group">
+    <label for="">Name</label>
+    <input type="text" class="form-control" [(ngModel)]="customer.name" [ngModelOptions]="{standalone: true}">
+  </div>
+
+  <div class="form-group">
+    <label for="">Type customer</label>
+    <select name="" id="" [(ngModel)]="customer.typeCustomer" [ngModelOptions]="{standalone: true}">
+      <option value="diamond" selected >Diamond</option>
+      <option value="platinium">Platinium</option>
+      <option value="gold">Gold</option>
+      <option value="silver">Silver</option>
+      <option value="member">member</option>
+    </select>
+  </div>
+
+
+
+  <div class="form-group">
+    <label for="">Birthday</label>
+    <input type="date" class="form-control" [(ngModel)]="customer.birthDay" [ngModelOptions]="{standalone: true}">
+  </div>
+
+  <div class="form-group">
+    <label for="">Id card</label>
+    <input type="number" class="form-control" [(ngModel)]="customer.idCard" [ngModelOptions]="{standalone: true}" >
+  </div>
+
+  <div class="form-group">
+    <label for="">Phone</label>
+    <input type="number" class="form-control" [(ngModel)]="customer.phone" [ngModelOptions]="{standalone: true}">
+  </div>
+
+  <div class="form-group">
+    <label for="">Email</label>
+    <input type="text" class="form-control" [(ngModel)]="customer.email" [ngModelOptions]="{standalone: true}">
+  </div>
+
+  <div class="form-group">
+    <label for="">Address</label>
+    <input type="text" class="form-control" [(ngModel)]="customer.address" [ngModelOptions]="{standalone: true}">
+  </div>
+  <button class="btn btn-primary" (click)="onEditCustomer()">Edit</button>
+
+</form>
+
